# create-cdk-app-cli

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
biome-test/: biome.json  cdk.json  package.json
biome-test/lib/: biometest-stack.ts
biome-test/src/: index.ts
biome-test/test/: context.ts
reference-project/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
reference-project/lib/: referenceproject-stack.ts
reference-project/src/: index.ts
src/: main.rs
templates/: binfile.ts  cdk.context.json  cdk.json  index.test.ts  libfile.ts  package-lock.json  package.json  srcfile.ts  testfile.ts  tsconfig.json
ultimate-test/: biome.json  cdk.json  package-lock.json  package.json  vitest.config.ts
ultimate-test/lib/: ultimatetest-stack.ts
ultimate-test/src/: index.ts
ultimate-test/test/: context.ts  ultimatetest.test.ts
