[package]
name = "create-cdk-app"
version = "0.5.0-beta"
edition = "2021"
license = "MIT"
authors = ["Andrea Amorosi <dreamorosi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
include_assets = "1.0.0"
reqwest = { version = "0.13", features = ["json"] }
spinoff = "0.8.0"
tokio = { version = "1", features = ["full"] }
