[package]
name = "create-cdk-app"
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Andrea Amorosi <dreamorosi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["derive"] }
include_dir = "0.7.4"
spinoff = "0.8.0"
